--- a/.travis.yaml
+++ b/.travis.yaml
@@ -5,7 +5,11 @@ node_js:
 
 install:
   - npm install
-  - npm 
+  - npm install mocha
+  - npm install chai
+  - npm install sinon
+  - npm install axios
+  - npm install cheerio
 
 before_script: 
   - chmod 0777 ./node_modules/.bin/mocha 
