--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ install:
   - npm install sinon
   - npm install axios
   - npm install cheerio
-
-before_script: 
-  - chmod 0777 ./node_modules/.bin/mocha 
+  
+before_script: chmod 0777 ./node_modules/.bin/mocha 
 
 script:
   - npm test
@@ -21,5 +20,13 @@ notifications:
   email:
     recipients:
       - mcvarona@up.edu.ph
-    on_success: always # default: change
-    on_failure: always # default: always
+      - huchiu@up.edu.ph
+      - kamarinduque@up.edu.ph
+    on_success: always 
+    on_failure: always 
+  slack:
+    rooms:
+      - theintegrationproject:0rbj2zPSRq213tltTQw2tmGY#general
+      - theintegrationproject:0rbj2zPSRq213tltTQw2tmGY#random
+    on_success: always 
+    on_failure: always 
